Fix min height for header on small screens

--- a/src/containers/Header/header.css
+++ b/src/containers/Header/header.css
@@ -196,6 +196,7 @@
     width: 90%;
   }
   .hero-container {
+    min-height: 70vh;
     border-radius: 35px;
   }
   .hero-text {
